Simplify check for sample deletion
Co-authored-by: wow-such-code <andreas.friedrich@uni-tuebingen.de>